--- a/Saturn/GoogleService-Info.plist
+++ b/Saturn/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>470949076184-p0299opdpopbbann3fg014nuau0mjhiv.apps.googleusercontent.com</string>
+	<string>470949076184-0h56keoskeuf6johp6276bvrdf4cf7qs.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.470949076184-p0299opdpopbbann3fg014nuau0mjhiv</string>
+	<string>com.googleusercontent.apps.470949076184-0h56keoskeuf6johp6276bvrdf4cf7qs</string>
 	<key>API_KEY</key>
 	<string>AIzaSyA0YkOurRWcfaqdxjPRIZNrDas6OhY1Y9k</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,22 +13,22 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.JEON.SimpleHN</string>
+	<string>au.jameseunson.Saturn</string>
 	<key>PROJECT_ID</key>
 	<string>simplehn-1eee0</string>
 	<key>STORAGE_BUCKET</key>
-	<string>Saturn-1eee0.appspot.com</string>
+	<string>simplehn-1eee0.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:470949076184:ios:810b2465bcad260964cbad</string>
+	<string>1:470949076184:ios:095d3628fe39f8e564cbad</string>
 </dict>
 </plist>
