--- a/Saturn/remote_config_defaults.plist
+++ b/Saturn/remote_config_defaults.plist
@@ -2,7 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>searchEnabled</key>
-  <string>true</string>
+	<key>searchEnabled</key>
+	<string>true</string>
+	<key>loggedInEnabled</key>
+	<string>false</string>
 </dict>
 </plist>
