--- a/Saturn/remote_config_defaults.plist
+++ b/Saturn/remote_config_defaults.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>autoPromptForReview</key>
+	<string>true</string>
 	<key>numberOfLaunchesToRequestReview</key>
 	<integer>3</integer>
 	<key>searchEnabled</key>
